5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1596_2894.log
== TEST (2019-03-26 18:11:53) 
-- CODE:
frete= 45
jogo=input("valor unitario do jogo")
(float(input("Qual o valor unitario do jogo? "))
pagar= jogo * 8 + frete
print(pagar)

-- ERROR:
File "XXXX", line 4
    pagar= jogo * 8 + frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:12:27) 
-- CODE:
frete= 45
jogo=input("valor unitario do jogo")
(float(input("Qual o valor unitario do jogo? "))
pagar= (jogo*8)+frete
print(pagar)

-- ERROR:
File "XXXX", line 4
    pagar= (jogo*8)+frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:13:04) 
-- CODE:
frete= 45
jogo=input("valor unitario do jogo")
(float(input("Qual o valor unitario do jogo? "))
total=(jogo*8)+frete
print(total)

-- ERROR:
File "XXXX", line 4
    total=(jogo*8)+frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:13:08) 
-- CODE:
frete= 45
jogo=input("valor unitario do jogo")
(float(input("Qual o valor unitario do jogo? "))


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:13:16) 
-- CODE:
frete= 45
jogo=input("valor unitario do jogo")
(float(input("Qual o valor unitario do jogo? "))


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:13:24) 
-- CODE:
frete= 45
jogo=input("valor unitario do jogo")
(float(input("Qual o valor unitario do jogo? "))
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:13:54) 
-- CODE:
frete= 45
jogo=float(input("valor unitario do jogo")

-- ERROR:
File "XXXX", line 3
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:18) 
-- CODE:
frete= 45
jogo=(input("valor unitario do jogo")

-- ERROR:
File "XXXX", line 3
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:23) 
-- CODE:
frete= 45
jogo=(input("valor unitario do jogo")
-- ERROR:
File "XXXX", line 3
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:24) 
-- CODE:
frete= 45
jogo=(input("valor unitario do jogo")
-- ERROR:
File "XXXX", line 3
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:25) 
-- CODE:
frete= 45
jogo=(input("valor unitario do jogo")
-- ERROR:
File "XXXX", line 3
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:31) 
-- CODE:
frete= 45
jogo=(input("valor unitario do jogo")
-- ERROR:
File "XXXX", line 3
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:49) 
-- CODE:
frete= 45
jogo=(input("valor unitario do jogo")
-- ERROR:
File "XXXX", line 3
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:21:12) 
-- CODE:
#definimos a varialvel frete
frete=float(45)
#colocamos a variavel que le o valor unitario do jogo
valor_jogo=float(input("valor unitario do jogo"))
#definimos a variavel que da o valor total a ser pago
total=(valor_jogo*8)+frete
-- ERROR:
File "XXXX", line 3
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:21:37) 
-- CODE:
#definimos a varialvel frete
frete=float(45)
#colocamos a variavel que le o valor unitario do jogo
valor_jogo=float(input("valor unitario do jogo"))
#definimos a variavel que da o valor total a ser pago
total=(valor_jogo*8)+frete
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:21:43) 
-- CODE:
#definimos a varialvel frete
frete=float(45)
#colocamos a variavel que le o valor unitario do jogo
valor_jogo=float(input("valor unitario do jogo"))
#definimos a variavel que da o valor total a ser pago
total=(valor_jogo*8)+frete
print(total)
-- EXECUTION TIME:
0.141798
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
